kubernetes/apps/observability/kubewall/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubewall
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - kubewall.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: kubewall
          port: 8443
